# Real-Time-Rendering

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Real-Time Rendering Solution.sln  Real-Time Rendering.sln  Real-Time-Rendering-Solution.sln
Documentation/: DoxygenConfig
Documentation/html/: _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8cpp_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _default_vertex_shader_8cpp.html  _default_vertex_shader_8cpp__incl.map  _default_vertex_shader_8cpp__incl.md5  _default_vertex_shader_8cpp_source.html  _default_vertex_shader_8h.html  _default_vertex_shader_8h__dep__incl.map  _default_vertex_shader_8h__dep__incl.md5  _default_vertex_shader_8h__incl.map  _default_vertex_shader_8h__incl.md5  _default_vertex_shader_8h_source.html  _device_8cpp.html  _device_8cpp__incl.map  _device_8cpp__incl.md5  _device_8cpp_source.html  _device_8h.html  _device_8h__dep__incl.map  _device_8h__dep__incl.md5  _device_8h__incl.map  _device_8h__incl.md5  _device_8h_source.html  _exports_8h.html  _exports_8h.js  _exports_8h__dep__incl.map  _exports_8h__dep__incl.md5  _exports_8h_source.html  _mesh_8cpp.html  _mesh_8cpp__incl.map  _mesh_8cpp__incl.md5  _mesh_8cpp_source.html  _mesh_8h.html  (+272 more)
Documentation/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+16 more)
Real-Time Rendering/: Camera.cpp  Camera.h  DebugTools.cpp  DebugTools.h  Device.cpp  Device.h  Exports.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Real-Time Rendering.vcxproj  Real-Time Rendering.vcxproj.filters  Real-Time-Rendering.h  Source.cpp
Real-Time Rendering Demos/: BasicCube.cpp  Real-Time Rendering Demos.vcxproj
Real-Time-Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  DefaultVertexShader.cpp  DefaultVertexShader.h  Device.cpp  Device.h  Exports.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Perspective.cpp  Perspective.h  Pipeline.cpp  Pipeline.h  Project.cpp  Project.h  RasterizeFilled.cpp  RasterizeFilled.h  RasterizeTextured.cpp  RasterizeTextured.h  RasterizeVertex.cpp  RasterizeVertex.h  RasterizeWireframe.cpp  RasterizeWireframe.h  RasterizerMode.h  Real-Time-Rendering.h  Real-Time-Rendering.vcxproj  Real-Time-Rendering.vcxproj.filters  VertexProcessor.cpp  VertexProcessor.h  VertexShader.cpp  VertexShader.h  ViewMode.h  ViewOrthogonal.cpp  ViewOrthogonal.h  ViewPerspective.cpp  (+1 more)
Real-Time-Rendering-Demos/: BasicCube.cpp  CMakeLists.txt  Real-Time-Rendering-Demos.vcxproj  Real-Time-Rendering-Demos.vcxproj.filters
cmakeBuilds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Real-Time-Rendering.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
cmakeBuilds/CMakeTools/: CMakeToolsHelpers.cmake  InitializeCache.cmake
cmakeBuilds/Real-Time-Rendering/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Real-Time-Rendering-Lib.sln  Real-Time-Rendering-Lib.vcxproj  Real-Time-Rendering-Lib.vcxproj.filters
cmakeBuilds/Real-Time-Rendering-Demos/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Demo.vcxproj  Demo.vcxproj.filters  Real-Time-Rendering-Demo.sln
